Readability fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,7 +46,7 @@ input[type='submit'], button {
 main {
     margin: auto;
     padding: 0 1%;
-    max-width: 80ch;
+    max-width: 75ch;
 }
 
 nav {
